# mxfold

./: .gitignore  CMakeLists.txt  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
src/: Config.hpp  FeatureMap.cpp  FeatureMap.hpp  InferenceEngine.cpp  InferenceEngine.hpp  LogSpace.hpp  Makefile.am  Makefile.in  ParameterHash.cpp  ParameterHash.hpp  SStruct.cpp  SStruct.hpp  Utilities.cpp  Utilities.hpp  adagrad.cpp  adagrad.hpp  cedar.h  cmdline.c  cmdline.h  default_params.cpp  main.cpp  mxfold.ggo  ngsfold.ggo  sgd_updater.cpp  sgd_updater.hpp
src/contrafold/: Config.hpp  InferenceEngine.hpp  InferenceEngine.ipp  ParameterHash.cpp  ParameterHash.hpp  ParameterManager.hpp  ParameterManager.ipp  SStruct.cpp  SStruct.hpp  Utilities.cpp  Utilities.hpp  Utilities.ipp
