AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = ngsfold

ngsfold_SOURCES = \
	main.cpp cmdline.c cmdline.h \
	contrafold/Config.hpp contrafold/LogSpace.hpp contrafold/Defaults.ipp \
	contrafold/InferenceEngine.hpp contrafold/InferenceEngine.ipp \
	contrafold/ParameterManager.hpp contrafold/ParameterManager.ipp \
	contrafold/SStruct.cpp contrafold/SStruct.hpp \
	contrafold/Utilities.cpp contrafold/Utilities.hpp contrafold/Utilities.ipp 
