bin_PROGRAMS = ngsfold

ngsfold_SOURCES = \
	main.cpp cmdline.c cmdline.h \
	Config.hpp LogSpace.hpp default_params.cpp \
	InferenceEngine.hpp InferenceEngine.cpp \
	ParameterHash.hpp ParameterHash.cpp \
	SStruct.cpp SStruct.hpp \
	Utilities.cpp Utilities.hpp Utilities.ipp \
	adagrad.cpp adagrad.hpp
